--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,9 @@ channels:
  - conda-forge
  - defaults
 dependencies:
- - python=3.9.5
+ - python=3.9
  - jupyter
- - numpy=1.20.3
- - matplotlib=3.4.2
+ - numpy=1.20
+ - matplotlib=3.4
+ - plasmapy=0.6
+ - astropy=4.2
